--- a/code/README
+++ b/code/README
@@ -1,4 +1,22 @@
 ===============================================================================
+* What to do
+
+Step 1: clone this project via the following command
+
+    git clone https://github.com/jmlien/cshape.git
+
+Step 2: Read your assigment document. Go to folder cshape\assignment and type make
+or use your faovrite latex editor to compile shape-assignment.tex; It should produce
+a pdf file. Read the pdf file carefully.
+
+Step 3: Compile the code in cshape\code; on windows, visual studio solution file
+is provided. The executable will be created in cshape\bin; for unix-like platforms,
+please use the provided makefile. See "To compile" below.
+
+Step 4: Finish your assignment. This readme file and shape-assignment.pdf (that you
+created in Step 1) should help you get started.
+
+===============================================================================
 * To compile:
 
 Just type make
@@ -25,7 +43,7 @@ shape -alpha  3 i.cube   # you will implement this
 There are several input files in data/ subdirectory. 
 
 ===============================================================================
-* To start:
+* before you start coding:
 
 read shape.h/c and macros.h
 read main.c, in particular the part that uses qhull to compute the convex hull
