updated the assignment

--- a/assignment/shape-assignment.tex
+++ b/assignment/shape-assignment.tex
@@ -55,8 +55,9 @@
 
 \begin{document}
 
-\lecture{Program Assignment 1}{Fall 2015}{Prof.\ Jyh-Ming Lien}{---}
+\lecture{Program Assignment:  Replacing Midterm Exam}{Fall 2017}{Prof.\ Jyh-Ming Lien}{---}
 
+\textbf{Due on Dec 09, 11:59pm, 2017.}
 
 The goal of this programming assignment is to deepen  your understanding on 3-d Voronoi Diagram, Delaunay Triangulation, as well as
 $\alpha$-shape and the 3-d crust algorithm. Another goal is to let you familiar with some well known libraries.
@@ -72,7 +73,6 @@ before the deadline.
 
 \section{Part 1: 3D Delaunay Triangulation (30 pts)}
 
-This part of the assignment is due on Oct 14, 11:59pm, 2015.
 
 \subsection{What should  you do?}
 
@@ -84,8 +84,6 @@ The output of your program should remain the same as it is now, therefore the pr
 
 
 \section{Part 2: 3D $\alpha$-shape (30 pts)}
-
-This part is due on Oct 18, 11:59pm, 2015.
 
 For a given value of $\alpha$, 
 the $\alpha$-shape includes all the tetrahedra in the Delaunay triangulation which have an empty circumsphere with {\em squared radius} equal or smaller than $\alpha$.
@@ -129,8 +127,6 @@ the provided OpenGL interface can understand your output.
 
 
 \section{Part 3: Crust Algorithm (40 pts)}
-
-This part is due on Oct 22, 11:59pm, 2015.
 
 
 %\begin{wrapfigure}{r}{0.5\textwidth}
